k8s/frontend/base/ingress/marketx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: marketx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/c3144b99-617c-4c48-9eff-c2c64e7a6dd1
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200-499"
spec:
  ingressClassName: alb
  rules:
    - host: marketx.heycampus.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marketx-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketx-frontend
                port:
                  number: 80
    - host: www.marketx.heycampus.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marketx-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketx-frontend
                port:
                  number: 80
